2009-12-15  Thomas Wolff  <towo@towo.net>

	* fhandler_console.cc (char_command): Fix code to select dim mode 
	to 2 rather than 9.  Add entries for mode 22 (normal, not bold) 
	28 (visible, not invisible), 25 (not blinking).

2009-12-14  Corinna Vinschen  <corinna@vinschen.de>

	* libc/getopt.c (getopt_internal): Set optreset according to optind
	setting earlier.  Reevaluate POSIXLY_CORRECT if optreset is set to !0.
	Handle a leading '-' in options independently of posixly_correct.

2009-12-09  Christopher Faylor  <me+cygwin@cgf.cx>

	* fhandler_fifo.cc (fhandler_fifo::open): Avoid resetting errno after
	it has been explicitly set.

	* include/cygwin/version.h: Bump DLL minor version number to 2.

2009-12-06  Corinna Vinschen  <corinna@vinschen.de>

	* include/cygwin/version.h: Bump DLL minor version number to 1.

2009-12-02  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_socket.cc (send_internal): Don't split datagram messages
	into pieces.

	* syslog.cc (vsyslog): Set default facility to LOG_USER if it hasn't
	been set yet.

2009-12-01  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_registry.cc (fhandler_registry::open): Mark /proc/registry
	directory and siblings as nohandle fhandler.

2009-11-30  Christopher Faylor  <me+cygwin@cgf.cx>

	* speclib: Use last dll found since that's the real name of the cygwin
	DLL.

2009-11-27  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_disk_file.cc (fhandler_base::fstat_helper): Fix typos in
	comments.  Always open file synchronized when reading header bytes,
	otherwise suffer stack corruption.

2009-11-26  Corinna Vinschen  <corinna@vinschen.de>

	* dtable.cc (dtable::stdio_init): Use GetCurrentProcess() rather than
	hMainProc as process handle when duplicating the stdout handle.
	Explain why.  Add Win32 error code to debug output.

2009-11-23  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_socket.cc (fhandler_socket::fixup_before_fork_exec): Add
	socket handle value to debug output.